--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,24 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-        link(rel="stylesheet", href="/assets/style.css")
+        title Book Index
+        link(rel="stylesheet", href="style.css" type='text/css')
     body
         .container
+        block content
+        br
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        hr
+        footer
+            p &copy; 2020 BookStore
+        script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
