added seperate style for contact template

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,9 +2,8 @@ extends layout
 block content
     h1 Welcome!
     .topnav
-        a(href="#home" class="active") Home
-        a(href="#about") About
-        a(href="#contact") Contact
+        a(href="/" class="active") Home
+        a(href="/contact") Contact
         
         .search-container
             form(action="#")
@@ -12,4 +11,3 @@ block content
                 button(type="submit") Submit
 
     h2(align="left" class="index-h2") Categories
-    
