--- a/views/contact.pug
+++ b/views/contact.pug
@@ -14,11 +14,11 @@ block content
             br
             br
             br
-            textarea(name="feedback", cols="50", rows="10", placeholder="Your Feedback")
+            textarea(name="feedback", cols="50", rows="10", placeholder="Your Feedback or Any book request")
             br
             br
             button(type="submit") Submit
 
         
         footer
-            p &copy; 2020 BookStore
+            p &copy; 2020 Library
