--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,5 +19,5 @@ html(lang="en")
         
        
     footer
-        p &copy; 2020 BookStore
+        p &copy; 2020 Library
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
