minor css changes

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 body{
     background-size: cover;   
     background-color: whitesmoke;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 h1{
