--- a/assets/contact.css
+++ b/assets/contact.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Courier New', Courier, monospace;
+}
 label{
     margin-left: 10px;
 
@@ -19,6 +22,7 @@ h1{
     text-align: center;
     padding-bottom: 40px;
     margin-top: 30px;
+    
 }
 
 .container{
