--- a/views/category.pug
+++ b/views/category.pug
@@ -1,1 +1,9 @@
-extends layout
+<!DOCTYPE html>
+html(lang="en")
+    head
+        link(rel="stylesheet", href="category.css", type="text/css")
+        meta(charset="UTF-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        title Search by Genre
+    body
+        h1 Search by Genre
