--- a/views/category.pug
+++ b/views/category.pug
@@ -7,3 +7,7 @@ html(lang="en")
         title Search by Genre
     body
         h1 Search by Genre
+        ul.list-group
+        each val, i in categories
+            a(href="/category/:id")= val
+            br
