created new branch after this

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -2,7 +2,7 @@
 head
     link(rel="stylesheet", href="contact.css")
 block content
-    h1 Contact US
+    h1 Contact Us
     .container
         form(action="/contact", method="POST")
             label(for="name") Your Name 
