--- a/views/index.pug
+++ b/views/index.pug
@@ -6,9 +6,8 @@ block content
         a(href="/contact") Contact
         a(href="/category") Search by Category
         .search-container
-            form(action="/", method="GET")
+            form(action="/")
                 input(type="text", placeholder="Search Library..", name="search")
                 button(type="submit", value="submit") Submit
-        
-
-    p= results
+    p= searchResult
+    
