--- a/views/index.pug
+++ b/views/index.pug
@@ -9,5 +9,5 @@ block content
             form(action="/")
                 input(type="text", placeholder="Search Library..", name="search")
                 button(type="submit", value="submit") Submit
-    p= searchResult
+    p <span><b>Book Found</b><hr><span> #{searchResult} 
     
