--- a/views/index.pug
+++ b/views/index.pug
@@ -6,8 +6,9 @@ block content
         a(href="/contact") Contact
         a(href="/category") Search by Category
         .search-container
-            form(action="/")
+            form(action="/", method="POST")
                 input(type="text", placeholder="Search Library..", name="search")
                 button(type="submit", value="submit") Submit
+
     p <span><b>Book Found</b><hr><span> #{searchResult} 
     
