--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 body{
     background-size: cover;   
-    background-color: whitesmoke;
+    background-color: white;
     font-family: 'Courier New', Courier, monospace;
 }
 
