--- a/views/contact.pug
+++ b/views/contact.pug
@@ -1,6 +1,8 @@
 
 head
-    link(rel="stylesheet", href="contact.css")
+    link(rel="stylesheet", href="contact.css") 
+    link(rel="stylesheet", href="style.css" type='text/css')
+    
 block content
     h1 Contact Us
     .container
